<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        tools:ignore="UselessParent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/inputMobile"
            android:hint="@string/mobile_number"
            android:textColorHint="@android:color/darker_gray"
            android:maxLength="11"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/inputCode"
            android:layout_below="@+id/inputMobile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/code"
            android:textColorHint="@android:color/darker_gray"
            android:layout_toStartOf="@+id/btnGetCode"
            android:layout_marginRight="10dp"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:background="@drawable/btn_common"
            android:textColor="@android:color/white"
            android:layout_below="@+id/inputCode"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_alignRight="@+id/inputCode"
            android:layout_alignEnd="@+id/inputCode"/>

        <Button
            android:text="@string/getCode"
            android:id="@+id/btnGetCode"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@drawable/btn_common"
            android:layout_width="130dp"
            android:layout_above="@+id/btnConfirm"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="50dp"/>

    </RelativeLayout>
</RelativeLayout>